# creative-workflow-worker

./: .env.worker.example  .gitattributes  .gitignore  AGENT_MANIFEST.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tasks.ps1
.github/workflows/: tests.yml
dcc/photoshop_uxp_plugin/: README.md  index.html  manifest.json  panel.css  panel.js
dcc/photoshop_uxp_plugin/icons/: README.md
docs/: designer_laptop_setup.md  env.example.md  live_browser_evidence_checklist.md  v2_claude_desktop_browser_automation.md
scripts/: check_worker_health.ps1  cleanup_designer_experimental_profiles.ps1  clone_chrome_profile_for_worker.ps1  create_designer_shortcuts.ps1  register_mcp_with_claude_desktop.ps1  setup_designer_one_click.ps1  setup_worker_windows.ps1  start_agent_gateway.ps1  start_designer_app.ps1  update_designer_from_git.ps1
src/creative_workflow/: __init__.py
src/creative_workflow/shared/: __init__.py  enums.py  ids.py  time.py
src/creative_workflow/shared/contracts/: __init__.py  api.py  assets.py  host_actions.py  jobs.py  llm.py  tasks.py  workers.py
src/creative_workflow/worker/: __init__.py  cli.py  config.py
src/creative_workflow/worker/agent_gateway/: __init__.py  router.py  schemas.py  server.py
src/creative_workflow/worker/agent_runtime/: __init__.py  backends.py  job_executor.py  router.py  schemas.py  (+1 more)
tests/integration/: test_agent_gateway.py  test_mcp_tools.py  test_worker_lifecycle.py
tests/unit/: test_agent_backends.py  test_agent_job_executor.py  test_agent_runtime.py  test_contracts.py  test_dcc_boundaries.py  test_designer_shortcuts.py  test_desktop_browser_flow.py  test_freepik_image_flow.py  test_gemini_prompt_flow.py  test_worker_config.py
(+34 files in other folders)
