[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creative-workflow-worker"
version = "0.1.0"
description = "Designer laptop worker for the creative workflow automation system."
requires-python = ">=3.11"
dependencies = [
  "httpx~=0.27.0",
  "playwright~=1.44.0",
  "pydantic~=2.7.0",
  "typer~=0.12.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[project.scripts]
worker = "creative_workflow.worker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
