[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creative-workflow-worker"
version = "0.1.0"
description = "Designer laptop worker for the creative workflow automation system."
requires-python = ">=3.11"
dependencies = [
  "anthropic~=0.40",
  "fastapi>=0.120,<1.0",
  "httpx~=0.27.0",
  "mcp~=1.2",
  "playwright~=1.44.0",
  "pydantic~=2.7.0",
  "typer~=0.12.0",
  "uvicorn~=0.30",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]

[project.scripts]
worker = "creative_workflow.worker.cli:app"
creative-workflow-mcp = "creative_workflow.worker.mcp.server:run"
creative-workflow-gateway = "creative_workflow.worker.agent_gateway.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
asyncio_mode = "auto"
